data/derived/fa15/progs/unify/prog3662.ml.out
Characters 184-211:
  let args = List.combine( List.rev l1, List.rev l2) in
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
